# oz-world

./: .gitignore  OZC_PROTOCOL.md  README.md  index.html  oz_agents_cli.py  oz_agents_legacy.py  oz_approvals.py  oz_bidding.py  oz_capabilities.py  oz_demo.js  oz_economy.py  oz_events.py  oz_evolve.py  oz_external.py  oz_identity.py  oz_iphone.py  oz_launcher.py  oz_macos.py  oz_marketplace.py  oz_network.py  oz_onchain.py  oz_reflect.py  oz_runtime.py  oz_screencast.py  oz_sessions.py  oz_vault.py  oz_webserver.py  oz_world.html  pyproject.toml  record_demo.sh  record_demo_with_audio.sh  server.py  x_analysis.md
ozc/: __init__.py  __main__.py  events.py  identity.py  ledger.py  onchain.py
token/: MINT_LOG.md  OZC_CONSTITUTION.md  OZC_ROADMAP.md  ozc_metadata.json
